--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
 
     <color name="white_full">#FFFFFF</color>
     <color name="black_full">#000000</color>
+    <color name="grayLight">#424242</color>
 </resources>
